fixed mobile Add alignment

--- a/src/components/AddPageStyle.css
+++ b/src/components/AddPageStyle.css
@@ -14,7 +14,7 @@
     
     .align {
         display: grid;
-        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-columns: 1fr 7fr 1fr;
     }
 }
 
@@ -30,6 +30,6 @@
 
 .align {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 7fr 1fr;
     
 }
